# InfraScope

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/: ARCHITECTURE.md
src/infrascope/: __init__.py  main.py
src/infrascope/analyzers/: benchmark.py  bottlenecks.py  comparisons.py  scoring.py  upgrades.py  workloads.py
src/infrascope/collectors/: __init__.py  audio.py  base.py  cooling.py  cpu.py  filesystem.py  gpu.py  memory.py  monitors.py  motherboard.py  network.py  pci.py  power.py  storage.py  usb.py  virtualization.py
src/infrascope/core/: __init__.py  config.py  dependency.py  exceptions.py
src/infrascope/reporting/: __init__.py  csv_report.py  html_report.py  json_report.py  markdown.py  terminal.py
src/infrascope/utils/: formatting.py  system.py
tests/: test_bottlenecks.py  test_cpu.py  test_gpu.py  test_memory.py  test_reporting.py  test_scoring.py  test_storage.py  test_workloads.py
